vanilla_deployment/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vanilla-deployment
  labels:
    name: vanilla-deployment
    app: vanilla-deployment
    environment: development
    team: devops
