vanilla_deployment/08-deployment-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemonset-agent-deployment
  namespace: vanilla-deployment
spec:
  selector:
    matchLabels:
      app: daemonset-agent-app
  template:
    metadata:
      labels:
        app: daemonset-agent-app
    spec:
      serviceAccountName: vanilla-sa
      containers:
        - name: daemonset-agent-app
          image: epuckop/flask-app:latest
          ports:
            - containerPort: 34987
