vanilla_deployment/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daemonset-agent-service
  namespace: vanilla-deployment
spec:
  selector:
    app: daemonset-agent-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 34987
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: stateless-agent-service
  namespace: vanilla-deployment
spec:
  selector:
    app: stateless-agent-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 34987
  type: ClusterIP
